<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.FragmentKetentuanLayanan">

    <RelativeLayout
        android:id="@+id/header"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/main_blue">>

        <ImageView
            android:id="@+id/ivBack"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_simple"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/ketentuan_layanan"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14dp"
            android:textColor="@color/main_white"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"/>
    </RelativeLayout>
<ScrollView
    android:layout_marginBottom="200px"
    android:layout_marginTop="100dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothica1_regular"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:text="@string/silakan_baca_dengan_seksama_ketentuan_layanan_ini_sebelum_menggunakan_aplikasi_resi_yang_dikembangkan_dengan_mengakses_atau_menggunakan_aplikasi_ini_anda_setuju_untuk_terikat_oleh_ketentuan_ketentuan_yang_tercantum_di_bawah_ini_jika_anda_tidak_setuju_dengan_ketentuan_ketentuan_ini_jangan_gunakan_aplikasi_ini"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothica1_bold"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:text="@string/_1_deskripsi_layanan"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothica1_regular"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:text="@string/aplikasi_resi_adalah_sebuah_platform_yang_memungkinkan_pengguna_untuk_menyimpan_mengelola_dan_melihat_nota_digital_serta_mengakses_berbagai_layanan_lain_yang_disediakan_oleh_pengembang"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothica1_bold"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:text="@string/_2_penggunaan_aplikasi"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothica1_regular"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:text="@string/a_anda_setuju_untuk_menggunakan_aplikasi_ini_hanya_untuk_tujuan_yang_sah_dan_sesuai_dengan_hukum_yang_berlaku" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothica1_regular"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:text="@string/b_anda_bertanggung_jawab_atas_semua_aktivitas_yang_terjadi_dalam_akun_anda_dan_harus_menjaga_kerahasiaan_kata_sandi_anda"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothica1_regular"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:text="@string/c_anda_tidak_boleh_menggunakan_aplikasi_ini_untuk_tujuan_yang_melanggar_hak_cipta_merek_dagang_atau_hak_lainnya_milik_pihak_ketiga"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothica1_bold"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:text="@string/_3_privasi_dan_keamanan"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothica1_regular"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:text="@string/a_kami_menghormati_privasi_anda_dan_kami_akan_mengumpulkan_menggunakan_dan_mengungkapkan_data_anda_sesuai_dengan_kebijakan_privasi_kami_anda_setuju_dengan_penggunaan_data_anda_sesuai_dengan_kebijakan_privasi_tersebut"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothica1_regular"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:text="@string/b_anda_bertanggung_jawab_atas_keamanan_data_anda_sendiri_dan_anda_harus_mengambil_tindakan_yang_sesuai_untuk_melindungi_informasi_pribadi_anda"/>        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothica1_bold"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:text="@string/_4_pembatasan_tanggung_jawab"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothica1_regular"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:text="@string/a_pengembang_tidak_bertanggung_jawab_atas_kerugian_atau_kerusakan_yang_timbul_akibat_penggunaan_aplikasi_ini"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothica1_regular"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:text="@string/b_aplikasi_ini_disediakan_apa_adanya_tanpa_jaminan_apa_pun_baik_tersurat_maupun_tersirat"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothica1_bold"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:text="@string/_5_perubahan_pada_ketentuan_layanan"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothica1_regular"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:text="@string/pengembang_berhak_untuk_mengubah_memodifikasi_atau_memperbarui_ketentuan_layanan_ini_sesuai_dengan_kebijakan_yang_berlaku_perubahan_tersebut_akan_diberlakukan_segera_setelah_diposting_di_aplikasi"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothica1_bold"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:text="@string/_6_hukum_yang_berlaku"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothica1_regular"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:text="@string/ketentuan_layanan_ini_diatur_oleh_dan_diinterpretasikan_sesuai_dengan_hukum_yang_berlaku_di_indonesia_anda_setuju_bahwa_pengadilan_di_indonesia_akan_memiliki_yurisdiksi_eksklusif_atas_segala_sengketa_yang_timbul_dari_atau_terkait_dengan_penggunaan_aplikasi_ini"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothica1_bold"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:text="@string/_7_hubungi_kami"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingBottom="20dp"
            android:paddingRight="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothica1_regular"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:text="@string/jika_anda_memiliki_pertanyaan_atau_komentar_tentang_ketentuan_layanan_ini_anda_dapat_menghubungi_kami_melalui_ofcresi_gmail_com"/>
        </RelativeLayout>
        </LinearLayout>
</ScrollView>
</RelativeLayout>
